--- a/react/src/components/AccountList/styles.scss
+++ b/react/src/components/AccountList/styles.scss
@@ -1,4 +1,5 @@
 .account-list {
+    position: relative;
     margin: 2em auto;
     width: 80%;
     box-shadow: 1px 12px 53px -8px rgba(0, 0, 0, 0.5);
@@ -27,4 +28,40 @@
         display: flex;
         flex-direction: column
     }
+    .footer {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding-left: 1em;
+        > * {
+            flex: 1;
+            font-size: 2em;
+        }
+        
+    }
+    .modal {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background:  rgba(245, 210, 210, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        &-inner {
+            border-radius: 5px;
+            width: 300px;
+            height: 130px;
+            background: whitesmoke;
+            margin: auto;
+            padding: 1em;
+        }
+    }
+}
+
+.hide {
+    display: none;
 }
